subject center align fixed

--- a/src/Dashboard/dashboard.css
+++ b/src/Dashboard/dashboard.css
@@ -226,17 +226,14 @@ label {
     min-height: 0;
     flex: 0 0 calc(24.5% - 10px);
 
-@media (max-width: 1060px) {
-    flex: 0 0 calc(32% - 10px);
-}
+    @media (max-width: 1060px) {
+        flex: 0 0 calc(32% - 10px);
+    }
 
-@media (max-width: 950px) {
-    flex: 0 0 calc(50% - 10px);
-}
-
-    /* @media (max-width: 770px) {
+    @media (max-width: 950px) {
         flex: 0 0 calc(50% - 10px);
-    } */
+    }
+
 }
 
 
@@ -285,12 +282,10 @@ label {
     justify-content: flex-start;
     background-color: #0F1E31;
     border-radius: 8px;
-    /* position: absolute;
-    bottom: 0;
-    right: 0; */
-    /* margin-top: 80px; */
+}
 
-    /* height: 40%; */
+.Subject-note {
+    text-align: left;
 }
 
 .note-rec-body {
